some changges on page

--- a/page.html
+++ b/page.html
@@ -26,7 +26,7 @@
     <div class="scoreDisplay"> Computer Score:
         <samp id="computerScoreDisplay">0</samp>
     </div>
-    <script src="index.js"></script>
+    <script src="indexx.js"></script>
 </body>
 
 </html>
